--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   go_router: ^14.6.1
   responsive_framework: ^1.5.1
+  gap: ^3.0.1
 
 dev_dependencies:
   flutter_test:
