--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,10 @@ dependencies:
   firebase_core: ^3.8.1
   firebase_auth: ^5.3.4
   provider: ^6.1.2
+  shared_preferences: ^2.3.3
+  get_it: ^8.0.2
+  logger: ^2.5.0
+  cloud_firestore: ^5.5.1
 
 dev_dependencies:
   flutter_test:
